initial feature setup complete

--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #927dfc;
+  background-color: #53438b;
 }
 .wrapper {
   position: relative;
-  max-width: 300px;
+  max-width: 600px;
   width: 100%;
   background: #fff;
   border-radius: 12px;
